<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    android:orientation="vertical"
    tools:context=".ui.FinalScoreActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/play_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/play_again"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trophy_image" />

            <ImageView
                android:contentDescription="@string/desc"
                android:id="@+id/trophy_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/gold"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/final_score" />

            <TextView
                android:id="@+id/final_score_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="150dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/final_score_label"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                app:layout_constraintBottom_toTopOf="@+id/final_score"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/final_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/final_score"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/final_score_message" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>