<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    tools:context=".ui.QuizQuestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/quiz_ques_ans_container"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="600dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="600dp" />

    <Button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#A99BFF"
        android:text="@string/previous_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_2">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_label"
        android:background="#A99BFF"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@id/previous"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_2"
        app:layout_constraintRight_toLeftOf="@+id/next"
        android:layout_marginTop="10dp"
        android:id="@+id/submit">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_label"
        android:background="#A99BFF"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_2"
        android:layout_marginTop="10dp"
        android:id="@+id/next">
    </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>